k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: todo-mysql
  ports:
    - port: 3306
      targetPort: 3306
