k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend
spec:
  ingressClassName: traefik
  rules:
    - host: todo.local
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 8080
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 8080
